--- a/public/assets/css/jass.css
+++ b/public/assets/css/jass.css
@@ -17,9 +17,6 @@ html {
 /**
  * Remove the margin in all browsers.
  */
- body {
-  margin: 0%;
-}
 
 /**
  * Render the `main` element consistently in IE.
@@ -359,6 +356,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   font-size: 16px;
   color: #1a1a1a;
+  background-image: url('../images/background.png');
 }
 
 h1,
