adding more code to homepage and added partials folder for rsvp form

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,26 +15,11 @@
     </h1>
   </header>
   <main class="container container-fluid mt-5">
-    {{{ body }}}
+  {{{ body }}}
 
-    <!-- Add your RSVP form here -->
-    <form action="/submit-rsvp" method="post">
-      <label for="name">Your Name:</label>
-      <input type="text" id="name" name="name" required>
-
-      <label for="plusOne">Bringing a Plus One?</label>
-      <input type="checkbox" id="plusOne" name="plusOne">
-
-      <label for="mealChoice">Select Your Meal:</label>
-      <select id="mealChoice" name="mealChoice">
-        <option value="vegetarian">Vegetarian</option>
-        <option value="chicken">Chicken</option>
-        <option value="beef">Beef</option>
-      </select>
-
-      <button type="submit">RSVP</button>
-    </form>
-  </main>
+  <!-- Include the RSVP form partial -->
+  {{> rsvpForm}}
+</main>
   <footer>
     <!-- Footer content goes here -->
   </footer>
