--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,23 +4,8 @@
       <h2>{{{get_emoji}}} {{user.name}}</h2>
       <h3><a href="mailto:{{user.email}}">{{user.email}}</a></h3>
 
-      <!-- Your RSVP form here -->
-      <form action="/submit-rsvp" method="post">
-        <label for="name">Your Name:</label>
-        <input type="text" id="name" name="name" required>
-
-        <label for="plusOne">Bringing a Plus One?</label>
-        <input type="checkbox" id="plusOne" name="plusOne">
-
-        <label for="mealChoice">Select Your Meal:</label>
-        <select id="mealChoice" name="mealChoice">
-          <option value="vegetarian">Vegetarian</option>
-          <option value="chicken">Chicken</option>
-          <option value="beef">Beef</option>
-        </select>
-
-        <button type="submit">RSVP</button>
-      </form>
+      <!-- Include the RSVP form partial -->
+      {{> partials/rsvpForm}}
     </div>
   </div>
 {{/each}}
