--- a/public/assets/css/jass.css
+++ b/public/assets/css/jass.css
@@ -1,349 +1,3 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-/* Document
-   ========================================================================== */
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-
-
-/* Sections
-   ========================================================================== */
-/**
- * Remove the margin in all browsers.
- */
-
-/**
- * Render the `main` element consistently in IE.
- */
-main {
-  display: block;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-hr {
-  box-sizing: content-box;
-  /* 1 */
-  height: 0;
-  /* 1 */
-  overflow: visible;
-  /* 2 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-pre {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-/**
- * Remove the gray background on active links in IE 10.
- */
-a {
-  background-color: transparent;
-}
-
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-abbr[title] {
-  border-bottom: none;
-  /* 1 */
-  text-decoration: underline;
-  /* 2 */
-  text-decoration: underline dotted;
-  /* 2 */
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-b,
-strong {
-  font-weight: bolder;
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-code,
-kbd,
-samp {
-  font-family: monospace, monospace;
-  /* 1 */
-  font-size: 1em;
-  /* 2 */
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-/**
- * Remove the border on images inside links in IE 10.
- */
-img {
-  border-style: none;
-}
-
-/* Forms
-   ========================================================================== */
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 1 */
-  line-height: 1.15;
-  /* 1 */
-  margin: 0;
-  /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-button,
-input {
-  /* 1 */
-  overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-button,
-select {
-  /* 1 */
-  text-transform: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
-  -webkit-appearance: button;
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-button::-moz-focus-inner,
-[type='button']::-moz-focus-inner,
-[type='reset']::-moz-focus-inner,
-[type='submit']::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-button:-moz-focusring,
-[type='button']:-moz-focusring,
-[type='reset']:-moz-focusring,
-[type='submit']:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
- * Correct the padding in Firefox.
- */
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-legend {
-  box-sizing: border-box;
-  /* 1 */
-  color: inherit;
-  /* 2 */
-  display: table;
-  /* 1 */
-  max-width: 100%;
-  /* 1 */
-  padding: 0;
-  /* 3 */
-  white-space: normal;
-  /* 1 */
-}
-
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-progress {
-  vertical-align: baseline;
-}
-
-/**
- * Remove the default vertical scrollbar in IE 10+.
- */
-textarea {
-  overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
-[type='checkbox'],
-[type='radio'] {
-  box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-[type='number']::-webkit-inner-spin-button,
-[type='number']::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-[type='search'] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */
-}
-
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-[type='search']::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  /* 1 */
-  font: inherit;
-  /* 2 */
-}
-
-/* Interactive
-   ========================================================================== */
-/*
- * Add the correct display in Edge, IE 10+, and Firefox.
- */
-details {
-  display: block;
-}
-
-/*
- * Add the correct display in all browsers.
- */
-summary {
-  display: list-item;
-}
-
-/* Misc
-   ========================================================================== */
-/**
- * Add the correct display in IE 10+.
- */
-template {
-  display: none;
-}
-
-/**
- * Add the correct display in IE 10.
- */
-[hidden] {
-  display: none;
-}
-
-/* 
-=================
-END NORMALIZE CSS
-=================
-*/
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-html,
-body {
-  min-height: 100%;
-}
 
 body {
   margin: 0;
@@ -352,6 +6,11 @@ body {
   font-size: 16px;
   color: #1a1a1a;
   background-image: url('../images/background.png');
+}
+
+select {
+  width: 200px;
+  height: 30px;
 }
 
 h1,
@@ -405,23 +64,24 @@ label {
   display: inline-block;
 }
 
-input,
-select,
-textarea {
-  margin: 0;
+
+input {
+  width: 200px;
+  height: 30px;
 }
 
 button {
-  background-color: #4CAF50;
-  color: white;
-  padding: 10px 15px;
+  width: 100px;
+  background-color: #ffffff;
+  color: black;
+  margin-top: 5px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #45a049;
+  background-color: #da6a1b;
 }
 
 a {
@@ -457,521 +117,6 @@ a:hover {
 
 .min-100-vw {
   min-width: 100vw;
-}
-
-/* MARGIN/PADDING UTILS */
-/* Margin - all sides */
-.m-0 {
-  margin: 0;
-}
-
-.m-1 {
-  margin: 0.375rem;
-}
-
-.m-2 {
-  margin: 0.625rem;
-}
-
-.m-3 {
-  margin: 1rem;
-}
-
-.m-4 {
-  margin: 1.375rem;
-}
-
-.m-5 {
-  margin: 1.625rem;
-}
-
-.m-auto {
-  margin: auto;
-}
-
-/* Margin-bottom */
-.mb-0 {
-  margin-bottom: 0;
-}
-
-.mb-1 {
-  margin-bottom: 0.375rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.625rem;
-}
-
-.mb-3 {
-  margin-bottom: 1rem;
-}
-
-.mb-4 {
-  margin-bottom: 1.375rem;
-}
-
-.mb-5 {
-  margin-bottom: 1.625rem;
-}
-
-.mb-auto {
-  margin-bottom: auto;
-}
-
-/* Margin-top */
-.mt-0 {
-  margin-top: 0;
-}
-
-.mt-1 {
-  margin-top: 0.375rem;
-}
-
-.mt-2 {
-  margin-top: 0.625rem;
-}
-
-.mt-3 {
-  margin-top: 1rem;
-}
-
-.mt-4 {
-  margin-top: 1.375rem;
-}
-
-.mt-5 {
-  margin-top: 1.625rem;
-}
-
-.mt-auto {
-  margin-top: auto;
-}
-
-/* Margin-right */
-.mr-0 {
-  margin-right: 0;
-}
-
-.mr-1 {
-  margin-right: 0.375rem;
-}
-
-.mr-2 {
-  margin-right: 0.625rem;
-}
-
-.mr-3 {
-  margin-right: 1rem;
-}
-
-.mr-4 {
-  margin-right: 1.375rem;
-}
-
-.mr-5 {
-  margin-right: 1.625rem;
-}
-
-.mr-auto {
-  margin-right: auto;
-}
-
-/* Margin-left */
-.ml-0 {
-  margin-left: 0;
-}
-
-.ml-1 {
-  margin-left: 0.375rem;
-}
-
-.ml-2 {
-  margin-left: 0.625rem;
-}
-
-.ml-3 {
-  margin-left: 1rem;
-}
-
-.ml-4 {
-  margin-left: 1.375rem;
-}
-
-.ml-5 {
-  margin-left: 1.625rem;
-}
-
-.ml-auto {
-  margin-left: auto;
-}
-
-/* Margin - x axis */
-.mx-0 {
-  margin-right: 0;
-  margin-left: 0;
-}
-
-.mx-1 {
-  margin-right: 0.375rem;
-  margin-left: 0.375rem;
-}
-
-.mx-2 {
-  margin-right: 0.625rem;
-  margin-left: 0.625rem;
-}
-
-.mx-3 {
-  margin-right: 1rem;
-  margin-left: 1rem;
-}
-
-.mx-4 {
-  margin-right: 1.375rem;
-  margin-left: 1.375rem;
-}
-
-.mx-5 {
-  margin-right: 1.625rem;
-  margin-left: 1.625rem;
-}
-
-.mx-auto {
-  margin-right: auto;
-  margin-left: auto;
-}
-
-/* Margin - y axis */
-.my-0 {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.my-1 {
-  margin-top: 0.375rem;
-  margin-bottom: 0.375rem;
-}
-
-.my-2 {
-  margin-top: 0.625rem;
-  margin-bottom: 0.625rem;
-}
-
-.my-3 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
-.my-4 {
-  margin-top: 1.375rem;
-  margin-bottom: 1.375rem;
-}
-
-.my-5 {
-  margin-top: 1.625rem;
-  margin-bottom: 1.625rem;
-}
-
-.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-/* Padding - all sides */
-.p-0 {
-  padding: 0;
-}
-
-.p-1 {
-  padding: 0.375rem;
-}
-
-.p-2 {
-  padding: 0.625rem;
-}
-
-.p-3 {
-  padding: 1rem;
-}
-
-.p-4 {
-  padding: 1.375rem;
-}
-
-.p-5 {
-  padding: 1.625rem;
-}
-
-/* padding-bottom */
-.pb-0 {
-  padding-bottom: 0;
-}
-
-.pb-1 {
-  padding-bottom: 0.375rem;
-}
-
-.pb-2 {
-  padding-bottom: 0.625rem;
-}
-
-.pb-3 {
-  padding-bottom: 1rem;
-}
-
-.pb-4 {
-  padding-bottom: 1.375rem;
-}
-
-.pb-5 {
-  padding-bottom: 1.625rem;
-}
-
-/* padding-top */
-.pt-0 {
-  padding-top: 0;
-}
-
-.pt-1 {
-  padding-top: 0.375rem;
-}
-
-.pt-2 {
-  padding-top: 0.625rem;
-}
-
-.pt-3 {
-  padding-top: 1rem;
-}
-
-.pt-4 {
-  padding-top: 1.375rem;
-}
-
-.pt-5 {
-  padding-top: 1.625rem;
-}
-
-/* padding-right */
-.pr-0 {
-  padding-right: 0;
-}
-
-.pr-1 {
-  padding-right: 0.375rem;
-}
-
-.pr-2 {
-  padding-right: 0.625rem;
-}
-
-.pr-3 {
-  padding-right: 1rem;
-}
-
-.pr-4 {
-  padding-right: 1.375rem;
-}
-
-.pr-5 {
-  padding-right: 1.625rem;
-}
-
-/* padding-left */
-.pl-0 {
-  padding-left: 0;
-}
-
-.pl-1 {
-  padding-left: 0.375rem;
-}
-
-.pl-2 {
-  padding-left: 0.625rem;
-}
-
-.pl-3 {
-  padding-left: 1rem;
-}
-
-.pl-4 {
-  padding-left: 1.375rem;
-}
-
-.pl-5 {
-  padding-left: 1.625rem;
-}
-
-/* padding - x axis */
-.px-0 {
-  padding-right: 0;
-  padding-left: 0;
-}
-
-.px-1 {
-  padding-right: 0.375rem;
-  padding-left: 0.375rem;
-}
-
-.px-2 {
-  padding-right: 0.625rem;
-  padding-left: 0.625rem;
-}
-
-.px-3 {
-  padding-right: 1rem;
-  padding-left: 1rem;
-}
-
-.px-4 {
-  padding-right: 1.375rem;
-  padding-left: 1.375rem;
-}
-
-.px-5 {
-  padding-right: 1.625rem;
-  padding-left: 1.625rem;
-}
-
-/* Padding - y axis */
-.py-0 {
-  padding-top: 0;
-  padding-bottom: 0;
-}
-
-.py-1 {
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem;
-}
-
-.py-2 {
-  padding-top: 0.625rem;
-  padding-bottom: 0.625rem;
-}
-
-.py-3 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-4 {
-  padding-top: 1.375rem;
-  padding-bottom: 1.375rem;
-}
-
-.py-5 {
-  padding-top: 1.625rem;
-  padding-bottom: 1.625rem;
-}
-
-.text-uppercase {
-  text-transform: uppercase !important;
-}
-
-.text-lowercase {
-  text-transform: lowercase !important;
-}
-
-.text-center {
-  text-align: center !important;
-}
-
-.text-justify {
-  text-align: justify !important;
-}
-
-.text-right {
-  text-align: right !important;
-}
-
-.text-primary {
-  color: #2d3e50 !important;
-}
-
-.text-info {
-  color: #1bbc9b !important;
-}
-
-.text-danger {
-  color: #e64c66 !important;
-}
-
-.text-default {
-  color: #aeaeae !important;
-}
-
-.text-light {
-  color: #d9e9e8 !important;
-}
-
-.text-dark {
-  color: #1a1a1a !important;
-}
-
-.text-white {
-  color: #ffffff !important;
-}
-
-.text-black {
-  color: #000000 !important;
-}
-
-.text-link {
-  color: #1b89bc !important;
-}
-
-/* BACKGROUND UTILS */
-.bg-primary {
-  background-color: #2d3e50 !important;
-}
-
-.bg-info {
-  background-color: #1bbc9b !important;
-}
-
-.bg-danger {
-  background-color: #e64c66 !important;
-}
-
-.bg-light {
-  background-color: #d9e9e8 !important;
-}
-
-.bg-dark {
-  background-color: #1a1a1a !important;
-}
-
-.bg-white {
-  background-color: #ffffff !important;
-}
-
-.bg-black {
-  background-color: #000000 !important;
-}
-
-.bg-link {
-  background-color: #1b89bc !important;
-}
-
-/* DISPLAY */
-.display-none {
-  display: none !important;
-}
-
-.display-block {
-  display: block !important;
-}
-
-.display-inline-block {
-  display: inline-block !important;
-}
-
-.display-inline {
-  display: inline !important;
-}
-
-.display-flex {
-  display: flex !important;
 }
 
 .btn {
@@ -1132,15 +277,6 @@ form .form-textarea {
   display: block;
 }
 
-form select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
-  background-repeat: no-repeat;
-  background-position-x: 98%;
-  background-position-y: 50%;
-}
-
 form label,
 form .form-label {
   display: inline-block;
@@ -1149,12 +285,12 @@ form .form-label {
 }
 
 form .form-input {
-  width: 100%;
+  width: 200px;
+  height: 30px;
   padding: 0.75rem;
   color: #1a1a1a;
   background-color: #ffffff;
   margin: 0.625rem 0;
-  font-size: 1.2rem;
   border: 1px solid #484848;
   border-radius: 0.3rem;
 }
