--- a/public/assets/css/jass.css
+++ b/public/assets/css/jass.css
@@ -8,6 +8,7 @@ body {
   background-image: url('../images/background.png');
 }
 
+
 select {
   width: 200px;
   height: 30px;
@@ -21,6 +22,7 @@ h5,
 h6 {
   margin: 0 0 0.5rem;
   line-height: 1.25;
+  font-weight: 700;
 }
 
 h1 {
