--- a/public/assets/css/jass.css
+++ b/public/assets/css/jass.css
@@ -4,49 +4,27 @@ body {
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   font-size: 16px;
-  color: #1a1a1a;
+  color: #f6f5f5;
   background-image: url('../images/background.png');
 }
 
+header {
+  padding-top: 15%;
+  text-align: center;
+}
 
 select {
   width: 200px;
   height: 30px;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+
+h1 {
+  font-size: 5rem;
+  color: white;
   margin: 0 0 0.5rem;
   line-height: 1.25;
   font-weight: 700;
-}
-
-h1 {
-  font-size: 2.25rem;
-}
-
-h2 {
-  font-size: 2rem;
-}
-
-h3 {
-  font-size: 1.75rem;
-}
-
-h4 {
-  font-size: 1.5rem;
-}
-
-h5 {
-  font-size: 1.25rem;
-}
-
-h6 {
-  font-size: 1rem;
 }
 
 p {
