through a tutoring session, we corrected some routes and edited handlebars

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,9 +1,6 @@
-{{#each users as |user|}}
   <div class="container mb-5">
     <div class="form-container">
       
-      <!-- RSVP form partial -->
-      {{> partials/rsvpForm}}
-    </div>
+      <a href="/submit-rsvp">Submit RSVP</a>
+      </div>
   </div>
-{{/each}}
