--- a/views/rsvpForm.handlebars
+++ b/views/rsvpForm.handlebars
@@ -1,9 +1,9 @@
-<form action="/submit-rsvp" method="post">
+<form action="/edit-rsvp" method="post">
   <label for="name">Guest Name:</label>
   <input type="text" id="name" name="name" required>
 
   <label for="mealChoice">Select Your Meal:</label>
-  <select id="mealChoice" name="mealChoice">
+  <select id="dietary_preference" name="dietary_preference">
     <option value="vegetarian">Vegetarian</option>
     <option value="chicken">Chicken</option>
     <option value="beef">Beef</option>
