changed background photo, and added more aesthetic to page

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,5 @@
-  <div class="container mb-5">
-    <div class="form-container">
-      
-      <a href="/submit-rsvp">Submit RSVP</a>
-      </div>
+<div class="container mb-5">
+  <div class="form-container">
+    <a href="/submit-rsvp" class="submit-rsvp-link">Submit RSVP</a>
   </div>
+</div>
