--- a/public/assets/css/jass.css
+++ b/public/assets/css/jass.css
@@ -1,16 +1,15 @@
 
 body {
-  margin: 0;
-  padding: 0;
+  margin-left: 100px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   font-size: 16px;
-  color: #f6f5f5;
+  color: #070606;
   background-image: url('../images/background.png');
-}
-
-header {
-  padding-top: 15%;
-  text-align: center;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  overflow: hidden;
 }
 
 select {
@@ -18,10 +17,25 @@ select {
   height: 30px;
 }
 
+.submit-rsvp-link {
+  font-size: 50px;
+  font-weight: bold; 
+  color: #172432;
+  text-decoration: none; 
+  padding: 30px 50px;
+  border: 2px solid #191c1f; 
+  border-radius: 5px; 
+  margin-left: 30px;
+}
+
+.submit-rsvp-link:hover {
+  background-color: #152435; /* Change background color on hover */
+  color: #ffffff; /* Change text color on hover */
+}
 
 h1 {
-  font-size: 5rem;
-  color: white;
+  font-size: 3rem;
+  color: rgb(20, 17, 17);
   margin: 0 0 0.5rem;
   line-height: 1.25;
   font-weight: 700;
@@ -48,6 +62,10 @@ label {
 input {
   width: 200px;
   height: 30px;
+}
+
+form {
+  margin-left: 100px;
 }
 
 button {
